--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.11
 google-auth==2.43.0
 gprof2dot==2025.4.14
+gunicorn==23.0.0
 idna==3.11
 inflection==0.5.1
 oauthlib==3.3.1
