--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 cryptography==46.0.3
 dj-rest-auth==7.0.1
+dj-database-url
 Django==5.2.8
 django-allauth==65.13.1
 django-filter==25.2
